[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://Assets/Others/ConfirmDialog/Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Others/SourceSansFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Others/ConfirmDialog/Yes.png" type="Texture" id=4]
[ext_resource path="res://Assets/Others/ConfirmDialog/Yes-Hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Others/ConfirmDialog/No.png" type="Texture" id=6]
[ext_resource path="res://Assets/Others/ConfirmDialog/No-Hover.png" type="Texture" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Scene" type="Node2D" parent="."]

[node name="ConfirmDialog" type="Control" parent="."]
pause_mode = 2
editor/display_folded = true
visible = false
margin_right = 1280.0
margin_bottom = 960.0

[node name="Dialog" type="TextureRect" parent="ConfirmDialog"]
margin_left = 451.0
margin_top = 310.0
margin_right = 912.0
margin_bottom = 646.0
texture = ExtResource( 2 )

[node name="Text" type="Label" parent="ConfirmDialog/Dialog"]
margin_left = 78.0
margin_top = 98.0
margin_right = 387.0
margin_bottom = 160.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.0941176, 0.211765, 0.345098, 1 )
text = "Sure to Exit?"
align = 1

[node name="Yes" type="TextureButton" parent="ConfirmDialog/Dialog"]
margin_left = 55.0
margin_top = 227.0
margin_right = 190.0
margin_bottom = 310.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="No" type="TextureButton" parent="ConfirmDialog/Dialog"]
margin_left = 266.0
margin_top = 227.0
margin_right = 401.0
margin_bottom = 310.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="ConfirmDialog/Dialog/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="ConfirmDialog/Dialog/No" to="." method="_on_No_pressed"]
